# bubblepwn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bubblepwn/: __init__.py  __main__.py  cli.py  config.py  context.py  http.py  logging.py  shell.py  ui.py  update_check.py
bubblepwn/bubble/: __init__.py  api.py  bundle.py  key_verify.py  name_normalize.py  plugin_catalog.py  schema.py  secrets.py  workflow.py
bubblepwn/bubble/es/: __init__.py  crypto.py  payload.py  transport.py
bubblepwn/bubble/parse/: __init__.py  dynamic_js.py  html.py  meta.py  static_js.py  workflow_names.py
bubblepwn/bubble/wordlists/: __init__.py  deprecated_plugins.txt  sketchy_plugin_hosts.txt  workflows.txt
bubblepwn/modules/: __init__.py  api_probe.py  base.py  config_audit.py  datatypes.py  elements.py  es_audit.py  files.py  fingerprint.py  pages.py  plugin_audit.py  plugins.py  secrets.py  workflows.py
bubblepwn/report/: __init__.py  generator.py  html_render.py  json_render.py  markdown.py  writer.py
docs/: architecture.md  cli.md  crypto.md  modules.md  workflows.md
tests/: conftest.py  test_context.py  test_crypto.py  test_datatypes_render.py  test_default_values_parser.py  test_es_enrich_merge.py  test_flow_presets.py  test_http_retry.py  test_name_normalize.py  test_parse_flags.py  test_plugin_catalog.py  test_progress_feedback.py  test_safe_path_segment.py  test_secrets_scan.py  test_update_check.py  test_workflows_classify.py
