[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bubblepwn"
version = "0.2.0"
description = "Interactive pentest toolkit for Bubble.io applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "bubblepwn" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0.47",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
bubblepwn = "bubblepwn.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["bubblepwn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
