[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bubblepwn"
version = "0.2.4"
description = "Interactive pentest toolkit for Bubble.io applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Siin0pe" }]
keywords = ["bubble.io", "pentest", "security", "cli", "elasticsearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0.47",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "build>=1.2"]

[project.scripts]
bubblepwn = "bubblepwn.__main__:main"

[project.urls]
Homepage = "https://github.com/Siin0pe/bubblepwn"
Repository = "https://github.com/Siin0pe/bubblepwn"
Issues = "https://github.com/Siin0pe/bubblepwn/issues"
Changelog = "https://github.com/Siin0pe/bubblepwn/releases"

[tool.hatch.build.targets.wheel]
packages = ["bubblepwn"]

[tool.hatch.build.targets.sdist]
include = [
    "bubblepwn/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
